# detectron2-to-calibrate-colors

./: CMakeLists.txt  README.md  cppcheck_report.txt  evaluate_model.ipynb  first.ipynb  slice_dataset.py
.github/workflows/: cppcheck.yaml  install.yaml
cmake/: FindSPINNAKER.cmake
dataset/test/: field_1.json  field_4.json  field_5.json  field_6.json  test_21.json  test_30.json
dataset/train/: new_0.json  new_10.json  new_11.json  new_12.json  new_13.json  new_14.json  new_15.json  new_16.json  test_0.json  test_10.json  test_11.json  test_12.json  test_13.json  test_14.json  test_15.json  test_16.json  test_17.json  test_19.json  test_2.json  test_20.json  test_22.json  test_23.json  test_24.json  test_25.json  test_27.json  test_28.json  test_29.json  test_3.json  test_31.json  test_32.json  test_33.json  test_34.json  test_35.json  test_36.json  test_37.json  test_38.json  test_39.json  test_4.json  test_40.json  test_43.json  (+10 more)
dataset/val/: test_1.json  test_18.json  test_26.json  test_41.json  test_42.json  test_6.json
model/: constants.py  evaluate.py  model.py  test_model.py  train_model.py  utils.py
vision/: SpinnakerFrameGrabber.cpp  SpinnakerFrameGrabber.h  SpinnakerFrameSaver.cpp  SpinnakerFrameSaver.h  main.cpp
